[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fyd"
version = "0.0.1"
authors = [
  { name="John Wesley Hostetter", email="jhostetter16@gmail.com" },
]
description = "Code demonstrating a simplification method to create human-readable fuzzy logic rules independent of an intended learning paradigm."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/johnHostetter/IJCAI-2025-FYD"
Issues = "https://github.com/johnHostetter/IJCAI-2025-FYD/issues"

[tool.hatch.build]
include = [
    "configurations/**",
    "YACS/**",
    "src/neuro_fuzzy/**",
    "src/organize/**",
    "src/fyd/**",
    "README.md",
    "LICENSE",
]
exclude = [
#    "experiments/**",
    "plots/**",
    "tests/**",
    "*.pyc",
    "*.pyo",
    ".git/**",
    "build/**",
    "dist/**",
    ".venv/**",
]
# Ignore VCS
ignore = ["*.git", "*.hg", ".git/**", ".hg/**"]

[tool.hatch.build.targets.wheel]
packages = [
    "YACS/**",
    "src/soft_computing",
    "src/neuro_fuzzy",
    "src/organize",
    "src/fyd",
]